Share modal align fix

--- a/src/styles/ShareModal.css
+++ b/src/styles/ShareModal.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
+  align-self: center;
   background-color: white;
   border: 1px solid #e6e6e6;
   border-radius: 10px;
